--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
     "flow-bin": "^0.83.0",
     "less": "^3.8.1",
     "less-loader": "^4.1.0",
+    "redux-devtools": "^3.4.1",
+    "redux-thunk": "^2.3.0",
     "style-loader": "^0.23.1",
     "webpack": "^4.22.0",
     "webpack-cli": "^3.1.2",
@@ -41,6 +43,8 @@
     "@babel/preset-flow": "^7.0.0",
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
-    "react-hot-loader": "^4.3.11"
+    "react-hot-loader": "^4.3.11",
+    "react-redux": "^5.1.0",
+    "redux": "^4.0.1"
   }
 }
