--- a/.flowconfig
+++ b/.flowconfig
@@ -1,4 +1,5 @@
 [ignore]
+.*/node_modules/.*
 
 [include]
 
@@ -10,5 +11,6 @@ all=warn
 [options]
 all=true
 include_warnings=true
+module.name_mapper.extension='less' -> 'LESSModule'
 
 [strict]
