--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "start": "webpack-dev-server --mode development",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "lint": "flow check"
+    "lint": "flow check",
+    "flow": "flow"
   },
   "repository": {
     "type": "git",
