--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "main": "index.js",
   "scripts": {
     "start": "webpack-dev-server --mode development",
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
+    "test:watch": "jest --watch",
     "lint": "flow check",
     "flow": "flow"
   },
@@ -30,11 +31,14 @@
     "css-loader": "^1.0.0",
     "enzyme": "^3.7.0",
     "enzyme-adapter-react-16": "^1.6.0",
+    "enzyme-to-json": "^3.3.4",
     "flow-bin": "^0.83.0",
     "flow-typed": "^2.5.1",
+    "jest": "^23.6.0",
     "less": "^3.8.1",
     "less-loader": "^4.1.0",
     "redux-devtools": "^3.4.1",
+    "redux-mock-store": "^1.5.3",
     "redux-thunk": "^2.3.0",
     "style-loader": "^0.23.1",
     "webpack": "^4.22.0",
@@ -50,5 +54,9 @@
     "react-hot-loader": "^4.3.11",
     "react-redux": "^5.1.0",
     "redux": "^4.0.1"
+  },
+  "jest": {
+    "setupEnzyme": "<rootDir>__tests__/setupEnzyme.js",
+    "testPathIgnorePatterns": ["<rootDir>/__tests__/"]
   }
 }
