--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "@babel/core": "^7.1.2",
     "@babel/preset-env": "^7.1.0",
     "@babel/preset-react": "^7.0.0",
+    "babel-core": "^7.0.0-bridge.0",
+    "babel-jest": "^23.6.0",
     "babel-loader": "^8.0.4",
     "babel-preset-flow": "^6.23.0",
     "babel-preset-react-hmre": "^1.1.1",
@@ -40,6 +42,7 @@
     "redux-devtools": "^3.4.1",
     "redux-mock-store": "^1.5.3",
     "redux-thunk": "^2.3.0",
+    "regenerator-runtime": "^0.12.1",
     "style-loader": "^0.23.1",
     "webpack": "^4.22.0",
     "webpack-cli": "^3.1.2",
@@ -56,7 +59,7 @@
     "redux": "^4.0.1"
   },
   "jest": {
-    "setupEnzyme": "<rootDir>__tests__/setupEnzyme.js",
-    "testPathIgnorePatterns": ["<rootDir>/__tests__/"]
+    "setupTestFrameworkScriptFile": "<rootDir>__tests__/setup/setupEnzyme.js",
+    "testPathIgnorePatterns": ["<rootDir>/__tests__/setup/"]
   }
 }
