--- a/package.json
+++ b/package.json
@@ -50,6 +50,9 @@
   },
   "dependencies": {
     "@babel/preset-flow": "^7.0.0",
+    "@fortawesome/fontawesome-svg-core": "^1.2.7",
+    "@fortawesome/free-solid-svg-icons": "^5.4.2",
+    "@fortawesome/react-fontawesome": "^0.1.3",
     "babel-plugin-transform-flow-strip-types": "^6.22.0",
     "identity-obj-proxy": "^3.0.0",
     "normalize.css": "^8.0.0",
