--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "less": "^3.8.1",
     "less-loader": "^4.1.0",
     "redux-devtools": "^3.4.1",
+    "redux-devtools-extension": "^2.13.5",
     "redux-mock-store": "^1.5.3",
     "redux-thunk": "^2.3.0",
     "regenerator-runtime": "^0.12.1",
@@ -60,6 +61,7 @@
     "react-dom": "^16.5.2",
     "react-hot-loader": "^4.3.11",
     "react-redux": "^5.1.0",
+    "react-router-dom": "^4.3.1",
     "redux": "^4.0.1"
   },
   "jest": {
