--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "axios": "^0.18.0",
     "babel-plugin-transform-flow-strip-types": "^6.22.0",
     "identity-obj-proxy": "^3.0.0",
+    "lodash": "^4.17.11",
     "normalize.css": "^8.0.0",
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
